--- a/vpc-set.yml
+++ b/vpc-set.yml
@@ -17,3 +17,18 @@
         tenancy: default
       register: vpc_out
 
+    - name: create publlic subnet
+      ec2_vpc_subnet:
+        vpc_id: "{{vpc_out.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        cidr: "{{pubsub1Cidr}}"
+        map_public: yes
+        state: "{{state}}"
+        wait: yes
+        tags:
+          Name: pubsub1
+      register: pubsub1_out
+
+
+
