--- a/vpc-set.yml
+++ b/vpc-set.yml
@@ -149,21 +149,16 @@
             gateway_id: "{{natgw_out.nat_gateway_id}}"
       register: priRT_out
 
-    - name : create ec2 instance
-      amazon.aws.ec2_instance:
+    - name: create ec2 instance
+      ec2:
+        key_name: bms-key
         region: "{{region}}"
-        state: "{{state}}"
-        vpc_subnet_id: "{{pubsub1_out.subnet.id}}"
-        tenancy: default
-        network:
-          assign_public_ip: true
-          security_group: default
-        ebs_optimized: true
-        availability_zone: "{{zone1}}"
-        core_count: 1
-        threads_per_core: 1
-        image_id: ami-123456
         instance_type: t2.micro
-        key_name:  "prod-ssh-key"
+        image: ami-0bcf5425cdc1d8a85
+        wait: yes
+        security_group: default
+        count: 1
+        vpc_subnet_id: "{{pubsub1_out.subnet.id}}"
+        assign_public_ip: yes
 
 
