--- a/vpc-set.yml
+++ b/vpc-set.yml
@@ -151,7 +151,7 @@
 
     - name: create ec2 instance
       ec2:
-        key_name: bms-key
+        key_name: kgf-key
         region: "{{region}}"
         instance_type: t2.micro
         image: ami-0bcf5425cdc1d8a85
